<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/activity_neighbour_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/neighbour_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@color/colorPrimary"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/backButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintStart_toStartOf="@id/neighbour_image"
        app:layout_constraintTop_toTopOf="@id/neighbour_image"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_keyboard_arrow_left_24dp"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/neighbour_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_white_1000"
        android:textSize="46sp"
        tools:text="Julien"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/neighbour_image"
        app:layout_constraintBottom_toBottomOf="@id/neighbour_image"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content_neighbour_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/md_grey_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/neighbour_image"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/neighbour_detail_firstpart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/cardview_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/md_black_1000"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Julien" />

            <include
                layout="@layout/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                app:layout_constraintBottom_toBottomOf="@id/cardview_name"
                app:layout_constraintEnd_toEndOf="@id/neighbour_detail_firstpart"
                app:layout_constraintStart_toStartOf="@id/neighbour_detail_firstpart" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cardview_place"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/cardview_name">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/cardview_place_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/ic_place_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/cardview_adress"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="25dp"
                    android:gravity="center_vertical"
                    android:text="@string/location"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardview_place_icon"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <include
                layout="@layout/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                app:layout_constraintBottom_toBottomOf="@id/cardview_place"
                app:layout_constraintEnd_toEndOf="@id/neighbour_detail_firstpart"
                app:layout_constraintStart_toStartOf="@id/neighbour_detail_firstpart" />

            <!-- PHONE -->
            <android.support.constraint.ConstraintLayout
                android:id="@+id/cardview_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/cardview_place">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/cardview_place_phone"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/ic_local_phone_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/item_cardview_phone"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="25dp"
                    android:gravity="center_vertical"
                    android:text="@string/phone_number"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cardview_place_phone"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <include
                layout="@layout/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                app:layout_constraintBottom_toBottomOf="@id/cardview_phone"
                app:layout_constraintEnd_toEndOf="@id/neighbour_detail_firstpart"
                app:layout_constraintStart_toStartOf="@id/neighbour_detail_firstpart" />

            <!-- Facebook -->
            <android.support.constraint.ConstraintLayout
                android:id="@+id/cardview_facebook"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/cardview_phone">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/item_cardview_icon_facebook"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/ic_internet_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/item_cardview_link_facebook"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="25dp"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/item_cardview_icon_facebook"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="www.facebook/julien" />

            </android.support.constraint.ConstraintLayout>


        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/neighbour_detail_firstpart">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/cardview_presentation_tittle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/about_me"
                android:textColor="@color/md_black_1000"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                layout="@layout/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                app:layout_constraintBottom_toBottomOf="@id/cardview_presentation_tittle"
                app:layout_constraintEnd_toEndOf="@id/neighbour_detail_firstpart"
                app:layout_constraintStart_toStartOf="@id/neighbour_detail_firstpart" />


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/about_me"
                app:layout_constraintEnd_toEndOf="@id/about_me"
                android:layout_margin="15dp"
                app:layout_constraintBottom_toBottomOf="@id/about_me"
                android:text="@string/description"
                app:layout_constraintTop_toBottomOf="@id/cardview_presentation_tittle"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_favorite"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/circle"
        android:cropToPadding="true"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/content_neighbour_details"
        app:layout_constraintTop_toBottomOf="@id/neighbour_image"
        app:layout_constraintEnd_toEndOf="@id/content_neighbour_details"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/ic_star_24dp"/>
</android.support.constraint.ConstraintLayout>